# bali-flood-prevention

./: .gitattributes  .gitignore  README.md  pyproject.toml
app/: eval_compare.py  simulation_api.py  train_dashboard.py
assets/: bali_adm2.geojson
configs/: bali_flood_finetune_modal.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
frontend/scripts/: copy-cesium.mjs
frontend/src/: App.tsx  BaliMap.tsx  GlobeView.tsx  SimulationControls.tsx  TelemetryPanel.tsx  api.ts  env.d.ts  styles.css
scripts/: audit_labels.py  build_hf_dataset.py  build_simulation_db.py  check_samples.py  delete_annotations.py  evaluate.py  finalize_finetune.py  finalize_smolvlm.py  generate_points.py  generate_samples.py  label_with_openai.py  label_with_openai_batch.py  launch_leap_modal.py  prepare_bali_flood.py  push_dataset_to_hf.py  push_gguf_to_hf.py  quantize.py  repair_blank_samples.py  train_smolvlm_transformers_modal.py
skills/bali-flood-labeler/: SKILL.md
src/bali_flood_prevention/: __init__.py  evaluator.py  hf_dataset.py  locations.py  points.py  quality.py  schema.py  simsat.py  simulation.py  tiles.py
templates/: smolvlm-image-url.jinja
tests/: test_core.py  test_evaluator.py  test_prepare_bali_flood.py  test_simulation.py  test_train_dashboard.py
